--- a/webview-ui/src/i18n/locales/en/chat.json
+++ b/webview-ui/src/i18n/locales/en/chat.json
@@ -1,4 +1,11 @@
 {
+	"ask": {
+		"autoApprovedRequestLimitReached": {
+			"title": "Auto-Approved Request Limit Reached",
+			"description": "Roo has reached the auto-approved limit of {{count}} API request(s). Would you like to reset the count and proceed with the task?",
+			"button": "Reset and Continue"
+		}
+	},
 	"greeting": "Welcome to Roo Code",
 	"task": {
 		"title": "Task",
@@ -136,7 +143,8 @@
 			"cancel": "Cancel",
 			"cannotUndo": "This action cannot be undone.",
 			"restoreFilesAndTaskDescription": "Restores your project's files back to a snapshot taken at this point and deletes all messages after this point."
-		}
+		},
+		"current": "Actual"
 	},
 	"contextCondense": {
 		"title": "Context Condensed",
@@ -270,12 +278,5 @@
 		"title": "Command Execution Warning",
 		"description": "Your command is being executed without VSCode terminal shell integration. To suppress this warning you can disable shell integration in the <strong>Terminal</strong> section of the <settingsLink>Roo Code settings</settingsLink> or troubleshoot VSCode terminal integration using the link below.",
 		"troubleshooting": "Click here for shell integration documentation."
-	},
-	"ask": {
-		"autoApprovedRequestLimitReached": {
-			"title": "Auto-Approved Request Limit Reached",
-			"description": "Roo has reached the auto-approved limit of {{count}} API request(s). Would you like to reset the count and proceed with the task?",
-			"button": "Reset and Continue"
-		}
 	}
 }
