--- a/webview-ui/src/i18n/locales/fr/chat.json
+++ b/webview-ui/src/i18n/locales/fr/chat.json
@@ -1,4 +1,11 @@
 {
+	"ask": {
+		"autoApprovedRequestLimitReached": {
+			"title": "Limite de demandes approuvées automatiquement atteinte",
+			"description": "Roo a atteint la limite auto-approuvée de {{count}} requête(s) API. Souhaitez-vous réinitialiser le compteur et poursuivre la tâche ?",
+			"button": "Réinitialiser et continuer"
+		}
+	},
 	"greeting": "Bienvenue sur Roo Code",
 	"task": {
 		"title": "Tâche",
@@ -137,7 +144,7 @@
 			"cannotUndo": "Cette action ne peut pas être annulée.",
 			"restoreFilesAndTaskDescription": "Restaure les fichiers de votre projet à un instantané pris à ce moment et supprime tous les messages après ce point."
 		},
-		"current": "Actuel"
+		"current": "Réel"
 	},
 	"contextCondense": {
 		"title": "Contexte condensé",
@@ -271,12 +278,5 @@
 		"title": "Avertissement d'exécution de commande",
 		"description": "Votre commande est exécutée sans l'intégration shell du terminal VSCode. Pour supprimer cet avertissement, vous pouvez désactiver l'intégration shell dans la section <strong>Terminal</strong> des <settingsLink>paramètres de Roo Code</settingsLink> ou résoudre les problèmes d'intégration du terminal VSCode en utilisant le lien ci-dessous.",
 		"troubleshooting": "Cliquez ici pour la documentation d'intégration shell."
-	},
-	"ask": {
-		"autoApprovedRequestLimitReached": {
-			"title": "Limite de requêtes auto-approuvées atteinte",
-			"description": "Roo a atteint la limite auto-approuvée de {{count}} requête(s) API. Souhaitez-vous réinitialiser le compteur et poursuivre la tâche ?",
-			"button": "Réinitialiser et continuer"
-		}
 	}
 }
