--- a/webview-ui/src/i18n/locales/ru/chat.json
+++ b/webview-ui/src/i18n/locales/ru/chat.json
@@ -1,4 +1,11 @@
 {
+	"ask": {
+		"autoApprovedRequestLimitReached": {
+			"title": "Достигнут лимит автоматически одобренных запросов",
+			"description": "Roo достиг автоматически одобренного лимита в {{count}} API-запрос(ов). Хотите сбросить счетчик и продолжить выполнение задачи?",
+			"button": "Сбросить и продолжить"
+		}
+	},
 	"greeting": "Добро пожаловать в Roo Code",
 	"task": {
 		"title": "Задача",
@@ -137,7 +144,7 @@
 			"cannotUndo": "Это действие нельзя отменить.",
 			"restoreFilesAndTaskDescription": "Восстанавливает файлы проекта до состояния на момент этой точки и удаляет все сообщения после нее."
 		},
-		"current": "Текущая"
+		"current": "Фактический"
 	},
 	"contextCondense": {
 		"title": "Контекст сжат",
@@ -271,12 +278,5 @@
 		"title": "Предупреждение о выполнении команды",
 		"description": "Ваша команда выполняется без интеграции оболочки терминала VSCode. Чтобы скрыть это предупреждение, вы можете отключить интеграцию оболочки в разделе <strong>Terminal</strong> в <settingsLink>настройках Roo Code</settingsLink> или устранить проблемы с интеграцией терминала VSCode, используя ссылку ниже.",
 		"troubleshooting": "Нажмите здесь для просмотра документации по интеграции оболочки."
-	},
-	"ask": {
-		"autoApprovedRequestLimitReached": {
-			"title": "Достигнут лимит автоматически одобренных запросов",
-			"description": "Roo достиг автоматически одобренного лимита в {{count}} API-запрос(ов). Хотите сбросить счетчик и продолжить задачу?",
-			"button": "Сбросить и продолжить"
-		}
 	}
 }
