--- a/webview-ui/src/i18n/locales/ca/chat.json
+++ b/webview-ui/src/i18n/locales/ca/chat.json
@@ -1,4 +1,11 @@
 {
+	"ask": {
+		"autoApprovedRequestLimitReached": {
+			"title": "Límit de sol·licituds aprovades automàticament assolit",
+			"description": "Roo ha arribat al límit d'aprovació automàtica de {{count}} petició/ons d'API. Voldries reiniciar el comptador i continuar amb la tasca?",
+			"button": "Restablir i continuar"
+		}
+	},
 	"greeting": "Benvingut a Roo Code",
 	"task": {
 		"title": "Tasca",
@@ -271,12 +278,5 @@
 		"title": "Advertència d'execució d'ordres",
 		"description": "La teva ordre s'està executant sense la integració de shell del terminal VSCode. Per suprimir aquest advertiment, pots desactivar la integració de shell a la secció <strong>Terminal</strong> de la <settingsLink>configuració de Roo Code</settingsLink> o solucionar problemes d'integració del terminal VSCode utilitzant l'enllaç a continuació.",
 		"troubleshooting": "Fes clic aquí per a la documentació d'integració de shell."
-	},
-	"ask": {
-		"autoApprovedRequestLimitReached": {
-			"title": "S'ha arribat al límit de sol·licituds aprovades automàticament",
-			"description": "Roo ha arribat al límit aprovat automàticament de {{count}} sol·licitud(s) d'API. Vols reiniciar el comptador i continuar amb la tasca?",
-			"button": "Reiniciar i continuar"
-		}
 	}
 }
