--- a/webview-ui/src/i18n/locales/de/marketplace.json
+++ b/webview-ui/src/i18n/locales/de/marketplace.json
@@ -81,6 +81,7 @@
 		"project": "Projekt (aktueller Arbeitsbereich)",
 		"global": "Global (alle Arbeitsbereiche)",
 		"method": "Installationsmethode",
+		"prerequisites": "Voraussetzungen",
 		"configuration": "Konfiguration",
 		"configurationDescription": "Konfiguriere die für diesen MCP-Server erforderlichen Parameter",
 		"button": "Installieren",
@@ -93,8 +94,7 @@
 		"goToMcp": "Zum MCP-Tab gehen",
 		"goToModes": "Zum Modi-Tab gehen",
 		"moreInfoMcp": "{{name}} MCP-Dokumentation anzeigen",
-		"validationRequired": "Bitte gib einen Wert für {{paramName}} an",
-		"prerequisites": "Voraussetzungen"
+		"validationRequired": "Bitte gib einen Wert für {{paramName}} an"
 	},
 	"sources": {
 		"title": "Marketplace-Quellen konfigurieren",
