--- a/webview-ui/src/i18n/locales/es/marketplace.json
+++ b/webview-ui/src/i18n/locales/es/marketplace.json
@@ -81,6 +81,7 @@
 		"project": "Proyecto (espacio de trabajo actual)",
 		"global": "Global (todos los espacios de trabajo)",
 		"method": "Método de instalación",
+		"prerequisites": "Requisitos previos",
 		"configuration": "Configuración",
 		"configurationDescription": "Configura los parámetros requeridos para este servidor MCP",
 		"button": "Instalar",
@@ -93,8 +94,7 @@
 		"goToMcp": "Ir a la pestaña MCP",
 		"goToModes": "Ir a la pestaña Modos",
 		"moreInfoMcp": "Ver documentación MCP de {{name}}",
-		"validationRequired": "Por favor proporciona un valor para {{paramName}}",
-		"prerequisites": "Requisitos previos"
+		"validationRequired": "Por favor proporciona un valor para {{paramName}}"
 	},
 	"sources": {
 		"title": "Configurar fuentes del marketplace",
