--- a/webview-ui/src/i18n/locales/hi/chat.json
+++ b/webview-ui/src/i18n/locales/hi/chat.json
@@ -1,4 +1,11 @@
 {
+	"ask": {
+		"autoApprovedRequestLimitReached": {
+			"title": "स्वतः-अनुमोदित अनुरोध सीमा पहुंच गई",
+			"description": "Roo ने स्वतः-स्वीकृत सीमा {{count}} API अनुरोध(अनुरोधों) तक पहुंच गया है। क्या आप गणना को रीसेट करके कार्य जारी रखना चाहेंगे?",
+			"button": "रीसेट करें और जारी रखें"
+		}
+	},
 	"greeting": "Roo Code में आपका स्वागत है",
 	"task": {
 		"title": "कार्य",
@@ -137,7 +144,7 @@
 			"cannotUndo": "इस क्रिया को पूर्ववत नहीं किया जा सकता।",
 			"restoreFilesAndTaskDescription": "आपके प्रोजेक्ट की फ़ाइलों को इस बिंदु पर लिए गए स्नैपशॉट पर पुनर्स्थापित करता है और इस बिंदु के बाद के सभी संदेशों को हटा देता है।"
 		},
-		"current": "वर्तमान"
+		"current": "वास्तविक"
 	},
 	"contextCondense": {
 		"title": "संदर्भ संक्षिप्त किया गया",
@@ -271,12 +278,5 @@
 		"title": "कमांड निष्पादन चेतावनी",
 		"description": "आपका कमांड VSCode टर्मिनल शेल इंटीग्रेशन के बिना निष्पादित हो रहा है। इस चेतावनी को दबाने के लिए आप <settingsLink>Roo Code सेटिंग्स</settingsLink> के <strong>Terminal</strong> अनुभाग में शेल इंटीग्रेशन को अक्षम कर सकते हैं या नीचे दिए गए लिंक का उपयोग करके VSCode टर्मिनल इंटीग्रेशन की समस्या का समाधान कर सकते हैं।",
 		"troubleshooting": "शेल इंटीग्रेशन दस्तावेज़ के लिए यहां क्लिक करें।"
-	},
-	"ask": {
-		"autoApprovedRequestLimitReached": {
-			"title": "स्वत:-स्वीकृत अनुरोध सीमा पहुंची",
-			"description": "Roo {{count}} API अनुरोध(धों) की स्वत:-स्वीकृत सीमा तक पहुंच गया है। क्या आप गणना को रीसेट करके कार्य जारी रखना चाहते हैं?",
-			"button": "रीसेट करें और जारी रखें"
-		}
 	}
 }
