--- a/webview-ui/src/i18n/locales/nl/marketplace.json
+++ b/webview-ui/src/i18n/locales/nl/marketplace.json
@@ -81,6 +81,7 @@
 		"project": "Project (huidige werkruimte)",
 		"global": "Globaal (alle werkruimtes)",
 		"method": "Installatiemethode",
+		"prerequisites": "Vereisten",
 		"configuration": "Configuratie",
 		"configurationDescription": "Configureer de vereiste parameters voor deze MCP-server",
 		"button": "Installeren",
@@ -93,8 +94,7 @@
 		"goToMcp": "Ga naar MCP-tabblad",
 		"goToModes": "Ga naar Modi-tabblad",
 		"moreInfoMcp": "{{name}} MCP-documentatie bekijken",
-		"validationRequired": "Geef een waarde op voor {{paramName}}",
-		"prerequisites": "Vereisten"
+		"validationRequired": "Geef een waarde op voor {{paramName}}"
 	},
 	"sources": {
 		"title": "Marketplace-bronnen configureren",
