--- a/webview-ui/src/i18n/locales/ru/marketplace.json
+++ b/webview-ui/src/i18n/locales/ru/marketplace.json
@@ -81,6 +81,7 @@
 		"project": "Проект (текущая рабочая область)",
 		"global": "Глобально (все рабочие области)",
 		"method": "Метод установки",
+		"prerequisites": "Предварительные требования",
 		"configuration": "Конфигурация",
 		"configurationDescription": "Настройте параметры, необходимые для этого MCP сервера",
 		"button": "Установить",
@@ -93,8 +94,7 @@
 		"goToMcp": "Перейти во вкладку MCP",
 		"goToModes": "Перейти во вкладку Режимы",
 		"moreInfoMcp": "Просмотреть документацию MCP {{name}}",
-		"validationRequired": "Пожалуйста, укажите значение для {{paramName}}",
-		"prerequisites": "Предварительные требования"
+		"validationRequired": "Пожалуйста, укажите значение для {{paramName}}"
 	},
 	"sources": {
 		"title": "Настроить источники marketplace",
