--- a/webview-ui/src/i18n/locales/tr/chat.json
+++ b/webview-ui/src/i18n/locales/tr/chat.json
@@ -1,4 +1,11 @@
 {
+	"ask": {
+		"autoApprovedRequestLimitReached": {
+			"title": "Otomatik Onaylanmış İstek Limiti Aşıldı",
+			"description": "Roo, otomatik onaylanan {{count}} API isteği sınırına ulaştı. Sayacı sıfırlamak ve göreve devam etmek ister misiniz?",
+			"button": "Sıfırla ve Devam Et"
+		}
+	},
 	"greeting": "Roo Code'a Hoş Geldiniz",
 	"task": {
 		"title": "Görev",
@@ -137,7 +144,7 @@
 			"cannotUndo": "Bu işlem geri alınamaz.",
 			"restoreFilesAndTaskDescription": "Projenizin dosyalarını bu noktada alınan bir anlık görüntüye geri yükler ve bu noktadan sonraki tüm mesajları siler."
 		},
-		"current": "Mevcut"
+		"current": "Gerçek"
 	},
 	"contextCondense": {
 		"title": "Bağlam Özetlendi",
@@ -271,12 +278,5 @@
 		"title": "Komut Çalıştırma Uyarısı",
 		"description": "Komutunuz VSCode terminal kabuk entegrasyonu olmadan çalıştırılıyor. Bu uyarıyı gizlemek için <settingsLink>Roo Code ayarları</settingsLink>'nın <strong>Terminal</strong> bölümünden kabuk entegrasyonunu devre dışı bırakabilir veya aşağıdaki bağlantıyı kullanarak VSCode terminal entegrasyonu sorunlarını giderebilirsiniz.",
 		"troubleshooting": "Kabuk entegrasyonu belgelerini görmek için buraya tıklayın."
-	},
-	"ask": {
-		"autoApprovedRequestLimitReached": {
-			"title": "Otomatik Onaylanan İstek Limiti Aşıldı",
-			"description": "Roo, {{count}} API isteği/istekleri için otomatik onaylanan limite ulaştı. Sayacı sıfırlamak ve göreve devam etmek istiyor musunuz?",
-			"button": "Sıfırla ve Devam Et"
-		}
 	}
 }
