--- a/webview-ui/src/i18n/locales/tr/marketplace.json
+++ b/webview-ui/src/i18n/locales/tr/marketplace.json
@@ -81,6 +81,7 @@
 		"project": "Proje (mevcut çalışma alanı)",
 		"global": "Global (tüm çalışma alanları)",
 		"method": "Yükleme Yöntemi",
+		"prerequisites": "Ön koşullar",
 		"configuration": "Yapılandırma",
 		"configurationDescription": "Bu MCP sunucusu için gerekli parametreleri yapılandırın",
 		"button": "Yükle",
@@ -93,8 +94,7 @@
 		"goToMcp": "MCP Sekmesine Git",
 		"goToModes": "Modlar Sekmesine Git",
 		"moreInfoMcp": "{{name}} MCP belgelerini görüntüle",
-		"validationRequired": "Lütfen {{paramName}} için bir değer sağlayın",
-		"prerequisites": "Ön koşullar"
+		"validationRequired": "Lütfen {{paramName}} için bir değer sağlayın"
 	},
 	"sources": {
 		"title": "Marketplace Kaynaklarını Yapılandır",
