--- a/webview-ui/src/i18n/locales/zh-CN/chat.json
+++ b/webview-ui/src/i18n/locales/zh-CN/chat.json
@@ -1,4 +1,11 @@
 {
+	"ask": {
+		"autoApprovedRequestLimitReached": {
+			"title": "已达到自动批准请求限额",
+			"description": "Roo 已达到自动批准的 {{count}} 个 API 请求限制。您想要重置计数并继续任务吗？",
+			"button": "重置并继续"
+		}
+	},
 	"greeting": "欢迎使用 Roo Code",
 	"task": {
 		"title": "任务",
@@ -137,7 +144,7 @@
 			"cannotUndo": "此操作无法撤消。",
 			"restoreFilesAndTaskDescription": "恢复文件至此时状态，并清除后续对话记录"
 		},
-		"current": "当前"
+		"current": "实际"
 	},
 	"contextCondense": {
 		"title": "上下文已压缩",
@@ -271,12 +278,5 @@
 		"title": "命令执行警告",
 		"description": "您的命令正在没有 VSCode 终端 shell 集成的情况下执行。要隐藏此警告，您可以在 <settingsLink>Roo Code 设置</settingsLink>的 <strong>Terminal</strong> 部分禁用 shell 集成，或使用下方链接排查 VSCode 终端集成问题。",
 		"troubleshooting": "点击此处查看 shell 集成文档。"
-	},
-	"ask": {
-		"autoApprovedRequestLimitReached": {
-			"title": "已达自动批准请求限制",
-			"description": "Roo 已达到 {{count}} 次 API 请求的自动批准限制。您想重置计数并继续任务吗？",
-			"button": "重置并继续"
-		}
 	}
 }
