--- a/webview-ui/src/i18n/locales/zh-CN/marketplace.json
+++ b/webview-ui/src/i18n/locales/zh-CN/marketplace.json
@@ -81,6 +81,7 @@
 		"project": "项目（当前工作区）",
 		"global": "全局（所有工作区）",
 		"method": "安装方法",
+		"prerequisites": "前置条件",
 		"configuration": "配置",
 		"configurationDescription": "配置此 MCP 服务所需的参数",
 		"button": "安装",
@@ -93,8 +94,7 @@
 		"goToMcp": "转到 MCP 标签页",
 		"goToModes": "转到模式标签页",
 		"moreInfoMcp": "查看 {{name}} MCP 文档",
-		"validationRequired": "请为 {{paramName}} 提供值",
-		"prerequisites": "前置条件"
+		"validationRequired": "请为 {{paramName}} 提供值"
 	},
 	"sources": {
 		"title": "配置 Marketplace 源",
