--- a/webview-ui/src/i18n/locales/zh-TW/chat.json
+++ b/webview-ui/src/i18n/locales/zh-TW/chat.json
@@ -1,4 +1,11 @@
 {
+	"ask": {
+		"autoApprovedRequestLimitReached": {
+			"title": "自动批准请求次数已达上限",
+			"description": "Roo 已达到自动批准的 {{count}} 个 API 请求限制。您是否要重置计数并继续任务？",
+			"button": "重置并继续"
+		}
+	},
 	"greeting": "歡迎使用 Roo Code",
 	"task": {
 		"title": "工作",
@@ -137,7 +144,7 @@
 			"cannotUndo": "此操作無法復原。",
 			"restoreFilesAndTaskDescription": "將您的專案檔案還原到此時的快照，並刪除此點之後的所有訊息。"
 		},
-		"current": "目前"
+		"current": "实际"
 	},
 	"contextCondense": {
 		"title": "上下文已壓縮",
@@ -271,12 +278,5 @@
 		"title": "命令執行警告",
 		"description": "您的命令正在沒有 VSCode 終端機 shell 整合的情況下執行。要隱藏此警告，您可以在 <settingsLink>Roo Code 設定</settingsLink>的 <strong>Terminal</strong> 部分停用 shell 整合，或使用下方連結排查 VSCode 終端機整合問題。",
 		"troubleshooting": "點擊此處查看 shell 整合文件。"
-	},
-	"ask": {
-		"autoApprovedRequestLimitReached": {
-			"title": "已達自動核准請求限制",
-			"description": "Roo 已達到 {{count}} 次 API 請求的自動核准限制。您想要重設計數並繼續工作嗎？",
-			"button": "重設並繼續"
-		}
 	}
 }
