--- a/src/i18n/locales/de/common.json
+++ b/src/i18n/locales/de/common.json
@@ -24,6 +24,10 @@
 	},
 	"errors": {
 		"invalid_data_uri": "Ungültiges Daten-URI-Format",
+		"error_copying_image": "Fehler beim Kopieren des Bildes: {{errorMessage}}",
+		"error_opening_image": "Fehler beim Öffnen des Bildes: {{error}}",
+		"could_not_open_file": "Datei konnte nicht geöffnet werden: {{errorMessage}}",
+		"could_not_open_file_generic": "Datei konnte nicht geöffnet werden!",
 		"checkpoint_timeout": "Zeitüberschreitung beim Versuch, den Checkpoint wiederherzustellen.",
 		"checkpoint_failed": "Fehler beim Wiederherstellen des Checkpoints.",
 		"no_workspace": "Bitte öffne zuerst einen Projektordner",
@@ -67,7 +71,8 @@
 		"custom_storage_path_set": "Benutzerdefinierter Speicherpfad festgelegt: {{path}}",
 		"default_storage_path": "Auf Standardspeicherpfad zurückgesetzt",
 		"settings_imported": "Einstellungen erfolgreich importiert.",
-		"share_link_copied": "Share-Link in die Zwischenablage kopiert"
+		"share_link_copied": "Share-Link in die Zwischenablage kopiert",
+		"image_copied_to_clipboard": "Bild-Daten-URI in die Zwischenablage kopiert"
 	},
 	"answers": {
 		"yes": "Ja",
