--- a/src/i18n/locales/ja/common.json
+++ b/src/i18n/locales/ja/common.json
@@ -24,6 +24,10 @@
 	},
 	"errors": {
 		"invalid_data_uri": "データURIフォーマットが無効です",
+		"error_copying_image": "画像のコピー中にエラーが発生しました：{{errorMessage}}",
+		"error_opening_image": "画像を開く際にエラーが発生しました：{{error}}",
+		"could_not_open_file": "ファイルを開けませんでした：{{errorMessage}}",
+		"could_not_open_file_generic": "ファイルを開けませんでした！",
 		"checkpoint_timeout": "チェックポイントの復元を試みる際にタイムアウトしました。",
 		"checkpoint_failed": "チェックポイントの復元に失敗しました。",
 		"no_workspace": "まずプロジェクトフォルダを開いてください",
@@ -67,7 +71,8 @@
 		"custom_storage_path_set": "カスタムストレージパスが設定されました：{{path}}",
 		"default_storage_path": "デフォルトのストレージパスに戻りました",
 		"settings_imported": "設定が正常にインポートされました。",
-		"share_link_copied": "共有リンクがクリップボードにコピーされました"
+		"share_link_copied": "共有リンクがクリップボードにコピーされました",
+		"image_copied_to_clipboard": "画像データURIがクリップボードにコピーされました"
 	},
 	"answers": {
 		"yes": "はい",
