--- a/src/i18n/locales/pt-BR/common.json
+++ b/src/i18n/locales/pt-BR/common.json
@@ -29,6 +29,7 @@
 	"errors": {
 		"invalid_data_uri": "Formato de URI de dados inválido",
 		"error_copying_image": "Erro ao copiar imagem: {{errorMessage}}",
+		"error_saving_image": "Erro ao salvar imagem: {{errorMessage}}",
 		"error_opening_image": "Erro ao abrir imagem: {{error}}",
 		"could_not_open_file": "Não foi possível abrir o arquivo: {{errorMessage}}",
 		"could_not_open_file_generic": "Não foi possível abrir o arquivo!",
@@ -76,7 +77,8 @@
 		"default_storage_path": "Retornado ao caminho de armazenamento padrão",
 		"settings_imported": "Configurações importadas com sucesso.",
 		"share_link_copied": "Link de compartilhamento copiado para a área de transferência",
-		"image_copied_to_clipboard": "URI de dados da imagem copiada para a área de transferência"
+		"image_copied_to_clipboard": "URI de dados da imagem copiada para a área de transferência",
+		"image_saved": "Imagem salva em {{path}}"
 	},
 	"answers": {
 		"yes": "Sim",
