--- a/src/i18n/locales/tr/common.json
+++ b/src/i18n/locales/tr/common.json
@@ -25,6 +25,7 @@
 	"errors": {
 		"invalid_data_uri": "Geçersiz veri URI formatı",
 		"error_copying_image": "Resim kopyalanırken hata oluştu: {{errorMessage}}",
+		"error_saving_image": "Resim kaydedilirken hata oluştu: {{errorMessage}}",
 		"error_opening_image": "Resim açılırken hata oluştu: {{error}}",
 		"could_not_open_file": "Dosya açılamadı: {{errorMessage}}",
 		"could_not_open_file_generic": "Dosya açılamadı!",
@@ -72,7 +73,8 @@
 		"default_storage_path": "Varsayılan depolama yoluna geri dönüldü",
 		"settings_imported": "Ayarlar başarıyla içe aktarıldı.",
 		"share_link_copied": "Paylaşım bağlantısı panoya kopyalandı",
-		"image_copied_to_clipboard": "Resim veri URI'si panoya kopyalandı"
+		"image_copied_to_clipboard": "Resim veri URI'si panoya kopyalandı",
+		"image_saved": "Resim {{path}} konumuna kaydedildi"
 	},
 	"answers": {
 		"yes": "Evet",
