--- a/src/i18n/locales/vi/common.json
+++ b/src/i18n/locales/vi/common.json
@@ -25,6 +25,7 @@
 	"errors": {
 		"invalid_data_uri": "Định dạng URI dữ liệu không hợp lệ",
 		"error_copying_image": "Lỗi khi sao chép hình ảnh: {{errorMessage}}",
+		"error_saving_image": "Lỗi khi lưu hình ảnh: {{errorMessage}}",
 		"error_opening_image": "Lỗi khi mở hình ảnh: {{error}}",
 		"could_not_open_file": "Không thể mở tệp: {{errorMessage}}",
 		"could_not_open_file_generic": "Không thể mở tệp!",
@@ -72,7 +73,8 @@
 		"default_storage_path": "Đã quay lại sử dụng đường dẫn lưu trữ mặc định",
 		"settings_imported": "Cài đặt đã được nhập thành công.",
 		"share_link_copied": "Liên kết chia sẻ đã được sao chép vào clipboard",
-		"image_copied_to_clipboard": "URI dữ liệu hình ảnh đã được sao chép vào clipboard"
+		"image_copied_to_clipboard": "URI dữ liệu hình ảnh đã được sao chép vào clipboard",
+		"image_saved": "Hình ảnh đã được lưu vào {{path}}"
 	},
 	"answers": {
 		"yes": "Có",
