--- a/webview-ui/src/i18n/locales/ca/common.json
+++ b/webview-ui/src/i18n/locales/ca/common.json
@@ -22,6 +22,7 @@
 			"zoomIn": "Ampliar",
 			"zoomOut": "Reduir",
 			"copy": "Copiar",
+			"save": "Desar imatge",
 			"viewCode": "Veure codi",
 			"viewDiagram": "Veure diagrama",
 			"close": "Tancar"
