--- a/webview-ui/src/i18n/locales/de/common.json
+++ b/webview-ui/src/i18n/locales/de/common.json
@@ -22,6 +22,7 @@
 			"zoomIn": "Vergrößern",
 			"zoomOut": "Verkleinern",
 			"copy": "Kopieren",
+			"save": "Bild speichern",
 			"viewCode": "Code anzeigen",
 			"viewDiagram": "Diagramm anzeigen",
 			"close": "Schließen"
