--- a/webview-ui/src/i18n/locales/es/common.json
+++ b/webview-ui/src/i18n/locales/es/common.json
@@ -22,6 +22,7 @@
 			"zoomIn": "Ampliar",
 			"zoomOut": "Reducir",
 			"copy": "Copiar",
+			"save": "Guardar imagen",
 			"viewCode": "Ver código",
 			"viewDiagram": "Ver diagrama",
 			"close": "Cerrar"
