--- a/webview-ui/src/i18n/locales/fr/common.json
+++ b/webview-ui/src/i18n/locales/fr/common.json
@@ -22,6 +22,7 @@
 			"zoomIn": "Agrandir",
 			"zoomOut": "Réduire",
 			"copy": "Copier",
+			"save": "Enregistrer l'image",
 			"viewCode": "Voir le code",
 			"viewDiagram": "Voir le diagramme",
 			"close": "Fermer"
