--- a/webview-ui/src/i18n/locales/hi/common.json
+++ b/webview-ui/src/i18n/locales/hi/common.json
@@ -22,6 +22,7 @@
 			"zoomIn": "बड़ा करें",
 			"zoomOut": "छोटा करें",
 			"copy": "कॉपी करें",
+			"save": "छवि सहेजें",
 			"viewCode": "कोड देखें",
 			"viewDiagram": "डायग्राम देखें",
 			"close": "बंद करें"
