--- a/webview-ui/src/i18n/locales/it/common.json
+++ b/webview-ui/src/i18n/locales/it/common.json
@@ -22,6 +22,7 @@
 			"zoomIn": "Ingrandisci",
 			"zoomOut": "Riduci",
 			"copy": "Copia",
+			"save": "Salva immagine",
 			"viewCode": "Visualizza codice",
 			"viewDiagram": "Visualizza diagramma",
 			"close": "Chiudi"
