--- a/webview-ui/src/i18n/locales/ja/common.json
+++ b/webview-ui/src/i18n/locales/ja/common.json
@@ -22,6 +22,7 @@
 			"zoomIn": "拡大",
 			"zoomOut": "縮小",
 			"copy": "コピー",
+			"save": "画像を保存",
 			"viewCode": "コードを表示",
 			"viewDiagram": "ダイアグラムを表示",
 			"close": "閉じる"
