--- a/webview-ui/src/i18n/locales/ko/common.json
+++ b/webview-ui/src/i18n/locales/ko/common.json
@@ -22,6 +22,7 @@
 			"zoomIn": "확대",
 			"zoomOut": "축소",
 			"copy": "복사",
+			"save": "이미지 저장",
 			"viewCode": "코드 보기",
 			"viewDiagram": "다이어그램 보기",
 			"close": "닫기"
