--- a/webview-ui/src/i18n/locales/nl/common.json
+++ b/webview-ui/src/i18n/locales/nl/common.json
@@ -22,6 +22,7 @@
 			"zoomIn": "Inzoomen",
 			"zoomOut": "Uitzoomen",
 			"copy": "Kopiëren",
+			"save": "Afbeelding opslaan",
 			"viewCode": "Code bekijken",
 			"viewDiagram": "Diagram bekijken",
 			"close": "Sluiten"
