--- a/webview-ui/src/i18n/locales/pl/common.json
+++ b/webview-ui/src/i18n/locales/pl/common.json
@@ -22,6 +22,7 @@
 			"zoomIn": "Powiększ",
 			"zoomOut": "Pomniejsz",
 			"copy": "Kopiuj",
+			"save": "Zapisz obraz",
 			"viewCode": "Zobacz kod",
 			"viewDiagram": "Zobacz diagram",
 			"close": "Zamknij"
