--- a/webview-ui/src/i18n/locales/ru/common.json
+++ b/webview-ui/src/i18n/locales/ru/common.json
@@ -22,6 +22,7 @@
 			"zoomIn": "Увеличить",
 			"zoomOut": "Уменьшить",
 			"copy": "Копировать",
+			"save": "Сохранить изображение",
 			"viewCode": "Посмотреть код",
 			"viewDiagram": "Посмотреть диаграмму",
 			"close": "Закрыть"
