--- a/webview-ui/src/i18n/locales/vi/common.json
+++ b/webview-ui/src/i18n/locales/vi/common.json
@@ -22,6 +22,7 @@
 			"zoomIn": "Phóng to",
 			"zoomOut": "Thu nhỏ",
 			"copy": "Sao chép",
+			"save": "Lưu hình ảnh",
 			"viewCode": "Xem mã",
 			"viewDiagram": "Xem biểu đồ",
 			"close": "Đóng"
