--- a/webview-ui/src/i18n/locales/zh-CN/common.json
+++ b/webview-ui/src/i18n/locales/zh-CN/common.json
@@ -22,6 +22,7 @@
 			"zoomIn": "放大",
 			"zoomOut": "缩小",
 			"copy": "复制",
+			"save": "保存图片",
 			"viewCode": "查看代码",
 			"viewDiagram": "查看图表",
 			"close": "关闭"
