--- a/webview-ui/src/i18n/locales/zh-TW/common.json
+++ b/webview-ui/src/i18n/locales/zh-TW/common.json
@@ -22,6 +22,7 @@
 			"zoomIn": "放大",
 			"zoomOut": "縮小",
 			"copy": "複製",
+			"save": "儲存圖片",
 			"viewCode": "檢視程式碼",
 			"viewDiagram": "檢視圖表",
 			"close": "關閉"
