--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -26,6 +26,7 @@
 		"invalid_data_uri": "Invalid data URI format",
 		"error_copying_image": "Error copying image: {{errorMessage}}",
 		"error_opening_image": "Error opening image: {{error}}",
+		"error_saving_image": "Error saving image: {{errorMessage}}",
 		"could_not_open_file": "Could not open file: {{errorMessage}}",
 		"could_not_open_file_generic": "Could not open file!",
 		"checkpoint_timeout": "Timed out when attempting to restore checkpoint.",
@@ -72,7 +73,8 @@
 		"default_storage_path": "Reverted to using default storage path",
 		"settings_imported": "Settings imported successfully.",
 		"share_link_copied": "Share link copied to clipboard",
-		"image_copied_to_clipboard": "Image data URI copied to clipboard"
+		"image_copied_to_clipboard": "Image data URI copied to clipboard",
+		"image_saved": "Image saved to {{path}}"
 	},
 	"answers": {
 		"yes": "Yes",
