--- a/src/i18n/locales/es/common.json
+++ b/src/i18n/locales/es/common.json
@@ -25,6 +25,7 @@
 	"errors": {
 		"invalid_data_uri": "Formato de URI de datos no válido",
 		"error_copying_image": "Error copiando la imagen: {{errorMessage}}",
+		"error_saving_image": "Error guardando la imagen: {{errorMessage}}",
 		"error_opening_image": "Error abriendo la imagen: {{error}}",
 		"could_not_open_file": "No se pudo abrir el archivo: {{errorMessage}}",
 		"could_not_open_file_generic": "¡No se pudo abrir el archivo!",
@@ -72,7 +73,8 @@
 		"default_storage_path": "Se ha vuelto a usar la ruta de almacenamiento predeterminada",
 		"settings_imported": "Configuración importada correctamente.",
 		"share_link_copied": "Enlace de compartir copiado al portapapeles",
-		"image_copied_to_clipboard": "URI de datos de imagen copiada al portapapeles"
+		"image_copied_to_clipboard": "URI de datos de imagen copiada al portapapeles",
+		"image_saved": "Imagen guardada en {{path}}"
 	},
 	"answers": {
 		"yes": "Sí",
