--- a/src/i18n/locales/hi/common.json
+++ b/src/i18n/locales/hi/common.json
@@ -25,6 +25,7 @@
 	"errors": {
 		"invalid_data_uri": "अमान्य डेटा URI फॉर्मेट",
 		"error_copying_image": "छवि कॉपी करने में त्रुटि: {{errorMessage}}",
+		"error_saving_image": "छवि सहेजने में त्रुटि: {{errorMessage}}",
 		"error_opening_image": "छवि खोलने में त्रुटि: {{error}}",
 		"could_not_open_file": "फ़ाइल नहीं खोली जा सकी: {{errorMessage}}",
 		"could_not_open_file_generic": "फ़ाइल नहीं खोली जा सकी!",
@@ -72,7 +73,8 @@
 		"default_storage_path": "डिफ़ॉल्ट स्टोरेज पाथ का उपयोग पुनः शुरू किया गया",
 		"settings_imported": "सेटिंग्स सफलतापूर्वक इम्पोर्ट की गईं।",
 		"share_link_copied": "साझा लिंक क्लिपबोर्ड पर कॉपी किया गया",
-		"image_copied_to_clipboard": "छवि डेटा URI क्लिपबोर्ड में कॉपी की गई"
+		"image_copied_to_clipboard": "छवि डेटा URI क्लिपबोर्ड में कॉपी की गई",
+		"image_saved": "छवि {{path}} में सहेजी गई"
 	},
 	"answers": {
 		"yes": "हां",
