--- a/src/i18n/locales/it/common.json
+++ b/src/i18n/locales/it/common.json
@@ -25,6 +25,7 @@
 	"errors": {
 		"invalid_data_uri": "Formato URI dati non valido",
 		"error_copying_image": "Errore durante la copia dell'immagine: {{errorMessage}}",
+		"error_saving_image": "Errore durante il salvataggio dell'immagine: {{errorMessage}}",
 		"error_opening_image": "Errore durante l'apertura dell'immagine: {{error}}",
 		"could_not_open_file": "Impossibile aprire il file: {{errorMessage}}",
 		"could_not_open_file_generic": "Impossibile aprire il file!",
@@ -72,7 +73,8 @@
 		"default_storage_path": "Tornato al percorso di archiviazione predefinito",
 		"settings_imported": "Impostazioni importate con successo.",
 		"share_link_copied": "Link di condivisione copiato negli appunti",
-		"image_copied_to_clipboard": "URI dati dell'immagine copiato negli appunti"
+		"image_copied_to_clipboard": "URI dati dell'immagine copiato negli appunti",
+		"image_saved": "Immagine salvata in {{path}}"
 	},
 	"answers": {
 		"yes": "Sì",
