--- a/src/i18n/locales/nl/common.json
+++ b/src/i18n/locales/nl/common.json
@@ -25,6 +25,7 @@
 	"errors": {
 		"invalid_data_uri": "Ongeldig data-URI-formaat",
 		"error_copying_image": "Fout bij kopiëren van afbeelding: {{errorMessage}}",
+		"error_saving_image": "Fout bij opslaan van afbeelding: {{errorMessage}}",
 		"error_opening_image": "Fout bij openen van afbeelding: {{error}}",
 		"could_not_open_file": "Kon bestand niet openen: {{errorMessage}}",
 		"could_not_open_file_generic": "Kon bestand niet openen!",
@@ -72,7 +73,8 @@
 		"default_storage_path": "Terug naar standaard opslagpad",
 		"settings_imported": "Instellingen succesvol geïmporteerd.",
 		"share_link_copied": "Deellink gekopieerd naar klembord",
-		"image_copied_to_clipboard": "Afbeelding data-URI gekopieerd naar klembord"
+		"image_copied_to_clipboard": "Afbeelding data-URI gekopieerd naar klembord",
+		"image_saved": "Afbeelding opgeslagen naar {{path}}"
 	},
 	"answers": {
 		"yes": "Ja",
