--- a/src/i18n/locales/ru/common.json
+++ b/src/i18n/locales/ru/common.json
@@ -25,6 +25,7 @@
 	"errors": {
 		"invalid_data_uri": "Неверный формат URI данных",
 		"error_copying_image": "Ошибка копирования изображения: {{errorMessage}}",
+		"error_saving_image": "Ошибка сохранения изображения: {{errorMessage}}",
 		"error_opening_image": "Ошибка открытия изображения: {{error}}",
 		"could_not_open_file": "Не удалось открыть файл: {{errorMessage}}",
 		"could_not_open_file_generic": "Не удалось открыть файл!",
@@ -72,7 +73,8 @@
 		"default_storage_path": "Возвращено использование пути хранения по умолчанию",
 		"settings_imported": "Настройки успешно импортированы.",
 		"share_link_copied": "Ссылка для совместного использования скопирована в буфер обмена",
-		"image_copied_to_clipboard": "URI данных изображения скопирован в буфер обмена"
+		"image_copied_to_clipboard": "URI данных изображения скопирован в буфер обмена",
+		"image_saved": "Изображение сохранено в {{path}}"
 	},
 	"answers": {
 		"yes": "Да",
