--- a/src/i18n/locales/zh-TW/common.json
+++ b/src/i18n/locales/zh-TW/common.json
@@ -25,6 +25,7 @@
 	"errors": {
 		"invalid_data_uri": "資料 URI 格式無效",
 		"error_copying_image": "複製圖片時發生錯誤：{{errorMessage}}",
+		"error_saving_image": "儲存圖片時發生錯誤：{{errorMessage}}",
 		"error_opening_image": "開啟圖片時發生錯誤：{{error}}",
 		"could_not_open_file": "無法開啟檔案：{{errorMessage}}",
 		"could_not_open_file_generic": "無法開啟檔案！",
@@ -72,7 +73,8 @@
 		"default_storage_path": "已恢復使用預設儲存路徑",
 		"settings_imported": "設定已成功匯入。",
 		"share_link_copied": "分享連結已複製到剪貼簿",
-		"image_copied_to_clipboard": "圖片資料 URI 已複製到剪貼簿"
+		"image_copied_to_clipboard": "圖片資料 URI 已複製到剪貼簿",
+		"image_saved": "圖片已儲存至 {{path}}"
 	},
 	"answers": {
 		"yes": "是",
