--- a/webview-ui/src/i18n/locales/en/common.json
+++ b/webview-ui/src/i18n/locales/en/common.json
@@ -22,6 +22,7 @@
 			"zoomIn": "Zoom In",
 			"zoomOut": "Zoom Out",
 			"copy": "Copy",
+			"save": "Save Image",
 			"viewCode": "View Code",
 			"viewDiagram": "View Diagram",
 			"close": "Close"
