--- a/webview-ui/src/i18n/locales/pt-BR/common.json
+++ b/webview-ui/src/i18n/locales/pt-BR/common.json
@@ -22,6 +22,7 @@
 			"zoomIn": "Ampliar",
 			"zoomOut": "Reduzir",
 			"copy": "Copiar",
+			"save": "Salvar imagem",
 			"viewCode": "Ver código",
 			"viewDiagram": "Ver diagrama",
 			"close": "Fechar"
