--- a/webview-ui/src/i18n/locales/tr/common.json
+++ b/webview-ui/src/i18n/locales/tr/common.json
@@ -22,6 +22,7 @@
 			"zoomIn": "Büyüt",
 			"zoomOut": "Küçült",
 			"copy": "Kopyala",
+			"save": "Resmi kaydet",
 			"viewCode": "Kodu görüntüle",
 			"viewDiagram": "Diyagramı görüntüle",
 			"close": "Kapat"
