--- a/webview-ui/src/i18n/locales/ko/chat.json
+++ b/webview-ui/src/i18n/locales/ko/chat.json
@@ -281,10 +281,10 @@
 		}
 	},
 	"indexingStatus": {
-		"ready": "Index ready",
-		"indexing": "Indexing {{percentage}}%",
-		"indexed": "Indexed",
-		"error": "Index error",
-		"status": "Index status"
+		"ready": "인덱스 준비됨",
+		"indexing": "인덱싱 중 {{percentage}}%",
+		"indexed": "인덱싱 완료",
+		"error": "인덱스 오류",
+		"status": "인덱스 상태"
 	}
 }
