--- a/webview-ui/src/i18n/locales/ru/chat.json
+++ b/webview-ui/src/i18n/locales/ru/chat.json
@@ -281,10 +281,10 @@
 		}
 	},
 	"indexingStatus": {
-		"ready": "Index ready",
-		"indexing": "Indexing {{percentage}}%",
-		"indexed": "Indexed",
-		"error": "Index error",
-		"status": "Index status"
+		"ready": "Индекс готов",
+		"indexing": "Индексация {{percentage}}%",
+		"indexed": "Проиндексировано",
+		"error": "Ошибка индекса",
+		"status": "Статус индекса"
 	}
 }
