--- a/webview-ui/src/i18n/locales/id/settings.json
+++ b/webview-ui/src/i18n/locales/id/settings.json
@@ -374,7 +374,15 @@
 			"hint": "Kosong = gunakan prompt default"
 		},
 		"autoCondenseContext": {
-			"name": "Secara otomatis memicu kondensasi konteks cerdas"
+			"name": "Secara otomatis memicu kondensasi konteks cerdas",
+			"description": "Ketika diaktifkan, Roo akan secara otomatis mengondensasi konteks ketika ambang batas tercapai. Ketika dinonaktifkan, kamu masih dapat memicu kondensasi konteks secara manual."
+		},
+		"condensingThreshold": {
+			"label": "Ambang Batas Pemicu Kondensasi",
+			"selectProfile": "Konfigurasi ambang batas untuk profil",
+			"defaultProfile": "Default Global (semua profil)",
+			"defaultDescription": "Ketika konteks mencapai persentase ini, akan secara otomatis dikondensasi untuk semua profil kecuali mereka memiliki pengaturan kustom",
+			"profileDescription": "Ambang batas kustom untuk profil ini saja (menimpa default global)"
 		},
 		"openTabs": {
 			"label": "Batas konteks tab terbuka",
